--- a/donate.html
+++ b/donate.html
@@ -189,11 +189,10 @@ iframe[width="1"][height="1"] {
         background: none;
         border: none;
         color: white;
-        font-size: 1.25rem;
         display: block;
         padding: 0;
         text-decoration: underline;
-        padding-left: 15px;
+        font-size: 15px;
       }
       .splash-buttons p {
         max-width: 179px;
