--- a/thanks.html
+++ b/thanks.html
@@ -91,6 +91,44 @@
 </style>
 <section id="thanks" class="section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
+		{% if page.custom_fields.donation_splash_page == 'Y' %}
+		<button style="display:block; margin-left: auto; margin-right:auto;" id="ty-splash-close" class="button arrow-right margin-bottom-small close-donation-splash-modal">Continue to 350.org</button>
+		<style>
+			#site-footer {
+				display: none;
+			}
+			section.section:only-of-type {
+				min-height: 100vh;
+			}
+			#ty-splash-close {
+				background: #3dc99a;
+				margin-left: auto;
+				display: block;
+			}
+			#ty-splash-close {
+				margin-right: 1%;
+			}
+			@media only screen and (min-width:720px) and (max-width:900px) {
+				#ty-splash-close {
+					margin-right: 2%;
+				}
+			}
+			@media screen and (min-width: 900px) {
+				#ty-splash-close {
+					margin-right: 1%;
+				}
+			}
+		</style>
+		<script>
+		$(function(){
+			$('.close-donation-splash-modal').on('click', function(){
+				window.parent.postMessage({
+					'type': 'close-splash-modal'
+				}, '*');
+			});
+		});
+		</script>
+		{% endif %}
 		<form class="ak-form dummy" name="act" method="POST" action="/act/" accept-charset="utf-8">
 		<input type="hidden" name="page" value="{{ page.name }}" />
 		{% include "./progress_meter.html" %}
@@ -174,27 +212,6 @@
 					</div>
 			 </div>
 
-			{% endif %}
-
-			{% if page.custom_fields.donation_splash_page == 'Y' %}
-			<button style="display:block; margin-left: auto; margin-right:auto;" class="button button-primary arrow-right margin-top-large close-donation-splash-modal">Continue to 350.org</button>
-			<style>
-				#site-footer {
-        			display: none;
-      			}
-				section.section:only-of-type {
-        			min-height: 100vh;
-				}
-			</style>
-			<script>
-			$(function(){
-				$('.close-donation-splash-modal').on('click', function(){
-					window.parent.postMessage({
-						'type': 'close-splash-modal'
-					}, '*');
-				});
-			});
-			</script>
 			{% endif %}
 		</div>
 		<form name="taf" method="POST" action="/update_action/" accept-charset="utf-8">
