--- a/thanks.html
+++ b/thanks.html
@@ -92,7 +92,7 @@
 <section id="thanks" class="section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
 		{% if page.custom_fields.donation_splash_page == 'Y' %}
-		<button style="display:block; margin-left: auto; margin-right:auto;" id="ty-splash-close" class="button arrow-right margin-bottom-small close-donation-splash-modal">Continue to 350.org</button>
+		<button id="ty-splash-close" class="button arrow-right margin-bottom-small close-donation-splash-modal">Continue to 350.org</button>
 		<style>
 			#site-footer {
 				display: none;
