--- a/donate.html
+++ b/donate.html
@@ -1188,6 +1188,8 @@ iframe[width="1"][height="1"] {
       });
 
     function scroll_to_top_of_box() {
+      var splashPage = '{% page.custom_fields.donation_splash_page %}';
+      if (splashPage === 'Y') return;
       //Gets top of three step box
       console.log("Scroll to top of box is called")
       var top_of_three_step_box = $('.ak-field-box.ak-donate-three-step').offset().top;
