--- a/donate.html
+++ b/donate.html
@@ -1188,7 +1188,7 @@ iframe[width="1"][height="1"] {
       });
 
     function scroll_to_top_of_box() {
-      var splashPage = '{% page.custom_fields.donation_splash_page %}';
+      var splashPage = '{{ page.custom_fields.donation_splash_page }}';
       if (splashPage === 'Y') return;
       //Gets top of three step box
       console.log("Scroll to top of box is called")
