--- a/donate.html
+++ b/donate.html
@@ -168,9 +168,9 @@ iframe[width="1"][height="1"] {
   </div>
   {% if page.custom_fields.donation_splash_page == 'Y' %}
     <div class="splash-buttons">
-      <button class="button button-primary arrow-right" id="donation-splash-next">Donate Now</button>
-      <p class="margin-top-large">or</p>
-      <button class="arrow-right margin-top-large close-donation-splash-modal" id="donation-splash-skip">Continue to 350.org</button>
+      <button class="button button-primary arrow-right" id="donation-splash-next">{% filter ak_text:"donate_splash_next_button" %}Donate Now{% endfilter %}</button>
+      <p class="margin-top-large">{% filter ak_text:"donate_splash_button_separator" %}or{% endfilter %}</p>
+      <button class="arrow-right margin-top-large close-donation-splash-modal" id="donation-splash-skip">{% filter ak_text:"donate_splash_skip_button" %}Continue to 350.org{% endfilter %}</button>
     </div>
     <style>
       .ak-donate-three-step,
