--- a/thanks.html
+++ b/thanks.html
@@ -92,7 +92,7 @@
 <section id="thanks" class="section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
 		{% if page.custom_fields.donation_splash_page == 'Y' %}
-		<button id="ty-splash-close" class="button arrow-right margin-bottom-small close-donation-splash-modal">{% filter ak_text:"donate_splash_ty_close_button" %}Continue to 350.org{% endfilter %}</button>
+		<button id="ty-splash-close" class="button arrow-right margin-bottom-small close-donation-splash-modal button-alternate">{% filter ak_text:"donate_splash_ty_close_button" %}Continue to 350.org{% endfilter %}</button>
 		<style>
 			#site-footer {
 				display: none;
@@ -107,6 +107,11 @@
 			}
 			#ty-splash-close {
 				margin-right: 1%;
+			}
+			@media only screen and (max-width:719px) {
+				#ty-splash-close {
+					width: 98%;
+				}
 			}
 			@media only screen and (min-width:720px) and (max-width:900px) {
 				#ty-splash-close {
