--- a/donate.html
+++ b/donate.html
@@ -843,6 +843,7 @@ iframe[width="1"][height="1"] {
 {% block script_additions %}
 
 <script language="javascript">
+
 //<!--
     // TODO: Commented out code needs to go.
     let paypalFieldOptionSelectedStepThree = false;
@@ -1945,6 +1946,8 @@ iframe[width="1"][height="1"] {
             $(el).remove();
         });
 
+        // Fix to stop donation errors gettin redirected from the error page
+        actionkit.utils.appendHiddenInput('referer_from_url', '1');
         actionkit.donations.handleError = function(err) {
             if (window.console) {
                 window.console.log(err);
