--- a/zoom_webinar_create.html
+++ b/zoom_webinar_create.html
@@ -22,19 +22,23 @@
     </div>
     </div>
     <div class="full-length">
-     <div class="input-text ak-input-type-event input-address third-full">
+     <div class="input-text ak-input-type-event input-address half-full">
         <label for="id_webinar_region">{% filter ak_text:"webinar_region"|capfirst %}Region{% endfilter %}</label>
         <select name="action_webinar_region" id="id_webinar_region" placeholder="Select region here..." type="text"></select>
     </div>
-    <div class="input-text third-full">
-        <label for="id_webinar_email">{% filter ak_text:"webinar_email"|capfirst %}Email{% endfilter %}</label>
-        <input name="action_webinar_email" id="id_webinar_email" type="email"  value="" />
-    </div>
-         <div class="input-text ak-input-type-event input-address third-full">
+         <div class="input-text ak-input-type-event input-address half-full">
         <label for="id_webinar_country">{% filter ak_text:"webinar_country"|capfirst %}Country (optional){% endfilter %}</label>
         <select name="action_webinar_country" id="id_webinar_country" placeholder="Select country here..." type="text">
           <option value="" selected disabled hidden>--</option>
         </select>
+    </div>
+    
+    </div>
+    <div class="full-length">
+      <div class="input-text">
+        <label for="id_webinar_email">{% filter ak_text:"webinar_email"|capfirst %}Zoom host email address{% endfilter %}</label>
+        <input name="action_webinar_email" id="id_webinar_email" type="email"  value="" />
+        <p class="text-small opacity-50">Must be the login email for a paid @350.org zoom account</p>
     </div>
     </div>
     {% if not update %}
@@ -83,6 +87,17 @@
           $("#toggle-meeting").show();
         });
 
+        // valid zoom accounts
+        const validZoomAccounts = [
+          'webinars@350.org',
+          'zoom@350.org',
+          '350africa@350.org',
+          'europe-admin@350.org'
+        ];
+
+        const isEmailPaidAccount = (email) => {
+          return validZoomAccounts.includes(email.trim().replace(/\s/g, ''));
+        };
 
 
         $("#webinar-errors").hide();
@@ -116,11 +131,10 @@
                     webinarErrors.hide();
                     zoomDetails.hide();
                     response.json().then(data=>{ 
-                      console.log(data, "datea")
                         // add the url to the address
                         resetErrors();
                         $("#id_event_address1").val(`Link: ${data.data.join_url} , Password: ${data.data.password || ""}`);
-                        $("#id_event_venue").val("Via Zoom Webinar");
+                        $("#id_event_venue").val("Via Zoom");
                         zoomSuccess.append(`<div class="webinar-details">
                         <p>Your webinar has been created! The zoom link is pre-filled below, and will be visible to attendees after they sign up.</p>
                         <br>
@@ -197,11 +211,9 @@
           fetch(`https://zaki-server.herokuapp.com/api/v1/countries`)
           .then(response=>{
               if(!response.ok) throw new Error("Response not ok.")
-              console.log("RES")
               response.json()
               .then(data=>{
                 countriesList = data.data;
-              console.log(countriesList,"RES")
                 addCountriesOptions(countriesList);
               });
           })
@@ -259,6 +271,10 @@
             key: 6,
             value: "Please enter a valid timezone.",
           },
+          {
+            key: 7,
+            value: "Email address is not a valid paid account at 350.org.",
+          },
         ]
 
         // Menu for duration
@@ -291,7 +307,7 @@
           });
         };
 
-        const validateZoomPayload = (topic, agenda, time, date, timezone) => {
+        const validateZoomPayload = (topic, agenda, time, date, timezone, email) => {
             if(topic.length === 0 ){
               errors = [...errors, errorKeys[0].key]
             }
@@ -318,6 +334,10 @@
               }
             }
 
+            if(email.length && !isEmailPaidAccount(email)){
+              errors = [...errors, errorKeys[6].key];
+            }
+
             return errors;
         }
 
@@ -342,7 +362,7 @@
             if(hasErrors){
               resetErrors()
             }
-            errors = validateZoomPayload(topic, agenda, time, date, timezone);
+            errors = validateZoomPayload(topic, agenda, time, date, timezone, email);
             if(errors.length){
               showWebinarErrors(errors);
             } else {
@@ -354,12 +374,8 @@
                   duration,
                   timezone: timezonesList.filter(t=>t.name === timezone)[0].id,
                   password: generateZoomWebinarPassword(4),
-                  agenda,
-                  settings: {
-                    alternative_hosts: email
-                  }
+                  agenda
               };
-              console.log(payload,"here")
               makeAPICall(payload);
             }  
         });
@@ -374,6 +390,7 @@
             const date = $("#id_event_starts_at_date").val();
             const time = $("#id_event_starts_at_time").val();
             const amPm = $("#id_event_starts_at_ampm").val();
+            const email = $("#id_webinar_email").val();
             const dateFormat = moment(date, "MM-D-YYYY").format("YYYY-MM-DD");
             const start_time = moment(`${dateFormat} ${time}:00 ${amPm}`, 'YYYY-MM-DD hh:mm:ss A').format('HH:mm:ss');
             const start_date = moment(`${dateFormat} ${time}:00 ${amPm}`, 'YYYY-MM-DD hh:mm:ss A').format('YYYY-MM-DD');
@@ -383,7 +400,7 @@
             if(hasErrors){
               resetErrors()
             }
-            errors = validateZoomPayload(topic, agenda, time, date, timezone);
+            errors = validateZoomPayload(topic, agenda, time, date, timezone, email);
             if(errors.length){
               showWebinarErrors(errors);
             } else {
@@ -396,7 +413,9 @@
                   timezone: timezonesList.filter(t=>t.name === timezone)[0].id,
                   password: generateZoomWebinarPassword(4),
                   agenda,
+                  email
               };
+              console.log(payload, "PAYZ")
               makeAPICall(payload, true);
             }  
         });
