--- a/zoom_webinar_list.html
+++ b/zoom_webinar_list.html
@@ -254,6 +254,7 @@
       <span id="today" class="webinar-date-filter">TODAY</span>
       <span id="week" class="webinar-date-filter">THIS WEEK</span>
       <span id="month" class="webinar-date-filter">THIS MONTH</span>
+      <span id="month" class="webinar-region-filter" id="webinar_region"></span>
     </div>
     <ul id="ak-campaign-list">
     <div id="loading-text">
@@ -287,8 +288,10 @@
       $(document).ready(function() {
         // Embed functionality is here
         console.log(window.location, "ref")
+
         const url = new URL(window.location);
-        console.log(url.searchParams.get('region'), "here???")
+        const region = url.searchParams.get('region');
+        console.log(region, "here???")
         // Embed functionality ends here
         // Cache the campaign events here.
         let campaignEvents = [];
@@ -303,7 +306,7 @@
             console.log("ZAKI access token missing.")
             return;
         }
-        fetch("https://zaki-server.herokuapp.com/api/v1/ak-webinar-campaigns?campaignId=187", {
+        fetch(`https://zaki-server.herokuapp.com/api/v1/ak-webinar-campaigns?campaignId=187&region=${region}&meetings=true`, {
           headers: {
             authorization: token
           }
