--- a/donate.html
+++ b/donate.html
@@ -14,6 +14,15 @@
 {% block content %}
 <section id="action-lead"
   class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
+  {% if page.custom_fields.donate_enable_countdown and page.custom_fields.donate_countdown_date and page.custom_fields.donate_countdown_copy %}
+  <div class="countdown">
+    <p id="countdown-text" class="text-large1 text-lineheight-small2 text-strong margin-bottom-normal text-dark"><span class="text-highlight bg-dkgray-trans">
+      <span class="js-countdown-timer" data-countdown-end-date="{{page.custom_fields.donate_countdown_date}}" style="line-height:1;display:inline-block;">
+        <span class="js-countdown-days"></span>: <span class="js-countdown-hours"></span>: <span class="js-countdown-minutes"></span>: <span class="js-countdown-seconds"></span> 
+      </span></span>
+      {{page.custom_fields.donate_countdown_copy}}</p>
+  </div>
+  {% endif %}
   <div class="section-inner">
     {% if page.custom_fields.page_is_inactive %}
     <div id="page-inactive" class="text-center">
@@ -564,6 +573,43 @@
   $(function () {
     $('#ak-recurring-type').insertBefore('#ak-amount-list');
     $('#ak-recurring-type').addClass('paymenttype-above');
+  });
+</script>
+{% endif %}
+
+{% if page.custom_fields.donate_enable_countdown and page.custom_fields.donate_countdown_date %}
+<!-- Add JS for countdown if enabled -->
+<script type="text/javascript">
+  /*!
+  * The Final Countdown for jQuery v2.1.0 (http://hilios.github.io/jQuery.countdown/)
+  * Copyright (c) 2015 Edson Hilios
+  */
+  /* End date/time format:
+      YYYY/MM/DD
+      MM/DD/YYYY
+      YYYY/MM/DD hh:mm:ss
+      MM/DD/YYYY hh:mm:ss
+  */
+  ;(function($){ !function(a){"use strict";"function"==typeof define&&define.amd?define(["jquery"],a):a(jQuery)}(function(a){"use strict";function b(a){if(a instanceof Date)return a;if(String(a).match(g))return String(a).match(/^[0-9]*$/)&&(a=Number(a)),String(a).match(/\-/)&&(a=String(a).replace(/\-/g,"/")),new Date(a);throw new Error("Couldn't cast `"+a+"` to a date object.")}function c(a){var b=a.toString().replace(/([.?*+^$[\]\\(){}|-])/g,"\\$1");return new RegExp(b)}function d(a){return function(b){var d=b.match(/%(-|!)?[A-Z]{1}(:[^;]+;)?/gi);if(d)for(var f=0,g=d.length;g>f;++f){var h=d[f].match(/%(-|!)?([a-zA-Z]{1})(:[^;]+;)?/),j=c(h[0]),k=h[1]||"",l=h[3]||"",m=null;h=h[2],i.hasOwnProperty(h)&&(m=i[h],m=Number(a[m])),null!==m&&("!"===k&&(m=e(l,m)),""===k&&10>m&&(m="0"+m.toString()),b=b.replace(j,m.toString()))}return b=b.replace(/%%/,"%")}}function e(a,b){var c="s",d="";return a&&(a=a.replace(/(:|;|\s)/gi,"").split(/\,/),1===a.length?c=a[0]:(d=a[0],c=a[1])),1===Math.abs(b)?d:c}var f=[],g=[],h={precision:100,elapse:!1};g.push(/^[0-9]*$/.source),g.push(/([0-9]{1,2}\/){2}[0-9]{4}( [0-9]{1,2}(:[0-9]{2}){2})?/.source),g.push(/[0-9]{4}([\/\-][0-9]{1,2}){2}( [0-9]{1,2}(:[0-9]{2}){2})?/.source),g=new RegExp(g.join("|"));var i={Y:"years",m:"months",n:"daysToMonth",w:"weeks",d:"daysToWeek",D:"totalDays",H:"hours",M:"minutes",S:"seconds"},j=function(b,c,d){this.el=b,this.$el=a(b),this.interval=null,this.offset={},this.options=a.extend({},h),this.instanceNumber=f.length,f.push(this),this.$el.data("countdown-instance",this.instanceNumber),d&&("function"==typeof d?(this.$el.on("update.countdown",d),this.$el.on("stoped.countdown",d),this.$el.on("finish.countdown",d)):this.options=a.extend({},h,d)),this.setFinalDate(c),this.start()};a.extend(j.prototype,{start:function(){null!==this.interval&&clearInterval(this.interval);var a=this;this.update(),this.interval=setInterval(function(){a.update.call(a)},this.options.precision)},stop:function(){clearInterval(this.interval),this.interval=null,this.dispatchEvent("stoped")},toggle:function(){this.interval?this.stop():this.start()},pause:function(){this.stop()},resume:function(){this.start()},remove:function(){this.stop.call(this),f[this.instanceNumber]=null,delete this.$el.data().countdownInstance},setFinalDate:function(a){this.finalDate=b(a)},update:function(){if(0===this.$el.closest("html").length)return void this.remove();var b,c=void 0!==a._data(this.el,"events"),d=new Date;b=this.finalDate.getTime()-d.getTime(),b=Math.ceil(b/1e3),b=!this.options.elapse&&0>b?0:Math.abs(b),this.totalSecsLeft!==b&&c&&(this.totalSecsLeft=b,this.elapsed=d>=this.finalDate,this.offset={seconds:this.totalSecsLeft%60,minutes:Math.floor(this.totalSecsLeft/60)%60,hours:Math.floor(this.totalSecsLeft/60/60)%24,days:Math.floor(this.totalSecsLeft/60/60/24)%7,daysToWeek:Math.floor(this.totalSecsLeft/60/60/24)%7,daysToMonth:Math.floor(this.totalSecsLeft/60/60/24%30.4368),totalDays:Math.floor(this.totalSecsLeft/60/60/24),weeks:Math.floor(this.totalSecsLeft/60/60/24/7),months:Math.floor(this.totalSecsLeft/60/60/24/30.4368),years:Math.abs(this.finalDate.getFullYear()-d.getFullYear())},this.options.elapse||0!==this.totalSecsLeft?this.dispatchEvent("update"):(this.stop(),this.dispatchEvent("finish")))},dispatchEvent:function(b){var c=a.Event(b+".countdown");c.finalDate=this.finalDate,c.elapsed=this.elapsed,c.offset=a.extend({},this.offset),c.strftime=d(this.offset),this.$el.trigger(c)}}),a.fn.countdown=function(){var b=Array.prototype.slice.call(arguments,0);return this.each(function(){var c=a(this).data("countdown-instance");if(void 0!==c){var d=f[c],e=b[0];j.prototype.hasOwnProperty(e)?d[e].apply(d,b.slice(1)):null===String(e).match(/^[$A-Z_][0-9A-Z_$]*$/i)?(d.setFinalDate.call(d,e),d.start()):a.error("Method %s does not exist on jQuery.countdown".replace(/\%s/gi,e))}else new j(this,b[0],b[1])})}}); }(jQuery) );
+
+  ;(function( $ ){
+    jQuery.fn.countdownTimer = function(options){
+      return this.each(function(){
+        console.log('countdownTimer function called.');
+        var countdownEndDate = $(this).attr("data-countdown-end-date");
+        $(this).countdown( countdownEndDate , function(event) {
+          console.log('countdown function callback fired');
+          $(this).find('.js-countdown-days').html( event.strftime('<span class="js-countdown-number">%D</span>') );
+          $(this).find('.js-countdown-hours').html( event.strftime('<span class="js-countdown-number">%H</span>') );
+          $(this).find('.js-countdown-minutes').html( event.strftime('<span class="js-countdown-number">%M</span>') );
+          $(this).find('.js-countdown-seconds').html( event.strftime('<span class="js-countdown-number">%S</span>') );
+        });
+      });
+    }
+  }( jQuery ) );
+
+  jQuery(document).ready(function($){
+    $(".js-countdown-timer").countdownTimer();
   });
 </script>
 {% endif %}
@@ -1421,6 +1467,54 @@
 			}
     }
   </style>  
+{% endif %}
+
+{% if page.custom_fields.donate_enable_countdown and page.custom_fields.donate_countdown_date and page.custom_fields.donate_countdown_copy %}
+<style>
+  .countdown {
+    background-color: #FFA902;
+    height: 67px;
+    position: relative;
+    width: 100%;
+    padding: 12px;
+    max-width: 550px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  @media screen and (min-width:900px) {
+    .countdown {
+      max-width: 900px;
+      padding: 20px;
+    }
+  }
+  
+  @media screen and (min-width:720px) {
+    #action-lead .section-inner {
+      padding: 0px;
+    }
+
+    form {
+      padding: 20px;
+      padding-top: 1.5em;
+    }
+  }
+
+  @media screen and (max-width: 720px) {
+    #action-lead {
+      padding: 0;
+    }
+    #action-lead .section-inner {
+      padding: 2vh 4vw;
+    }
+
+    .title-section-60, .title-section {
+      justify-content: unset;
+    }
+  }
+
+</style>
 {% endif %}
 
 {% endblock %}
