--- a/thanks.html
+++ b/thanks.html
@@ -497,7 +497,7 @@ actionkit.forms.initForm('act');
 
 
 jQuery(document).ready(function($){
-	var shareURL = '/share/link?type=ot&page_name={{page.name}}';
+	var shareURL = '/share/link?type=ot&page_name={{page.name}}&short=1';
 	$.ajax({
 		method: 'GET',
 		url: shareURL,
