--- a/donate.html
+++ b/donate.html
@@ -1517,4 +1517,13 @@
 </style>
 {% endif %}
 
+<script>
+  $(function () {
+    var searchParams = new URLSearchParams(window.location.search);
+    if (searchParams.has('skip2') && searchParams.get('skip2') === 'true') {
+      three_step_advance();
+    }
+  });
+</script>
+
 {% endblock %}
